Fixes footer icon alignment Adds external svg icons

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -508,15 +508,20 @@ footer {
     & a {
         display: block;
         font-weight: normal;
-    }
 
-    & a svg path {
-        transition: fill 300ms ease-out;
-    }
+        & svg {
+            width: 25px;
+            height: 25px;
 
-    & a svg:hover path {
-        fill: #7d16bf;
-        transition: fill 200ms ease-out;
+            & path {
+                transition: fill 300ms ease-out;
+            }
+
+            &:hover path {
+                fill: #7d16bf;
+                transition: fill 200ms ease-out;
+            }
+        }
     }
 }
 
